--- a/META.yml
+++ b/META.yml
@@ -32,16 +32,17 @@ no_index:
 provides:
   Mojolicious::Plugin::Args:
     file: lib/Mojolicious/Plugin/Args.pm
-    version: '0.01'
+    version: '0.02'
 requires:
   Mojo::Base: '0'
   Mojo::JSON: '0'
+  Mojolicious: '0'
   perl: '5.010'
 resources:
   bugtracker: https://github.com/sharabash/mojolicious-plugin-args/issues
   homepage: https://metacpan.org/release/Mojolicious-Plugin-Args
   repository: git://github.com/sharabash/mojolicious-plugin-args.git
-version: '0.01'
+version: '0.02'
 x_authority: cpan:AMIRITE
 x_contributors:
   - 'Nour Sharabash <nour.sharabash@gmail.com>'
