--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ abstract            = Gives you a simple %args hash of parameters on the request
 license             = Perl_5
 copyright_holder    = Nour Sharabash
 main_module         = lib/Mojolicious/Plugin/Args.pm
-version             = 0.01
+version             = 0.02
 
 ; version provider
 ; [Git::NextVersion]  ; get version from last release tag
@@ -52,6 +52,9 @@ options = test_one_dot = 0
 ; metadata
 [AutoPrereqs]       ; find prereqs from code
 skip = ^t::lib
+
+[Prereqs]
+Mojolicious = 0
 
 [Authority]
 authority = cpan:AMIRITE
